kubernetes-config/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: "Quarkus GrumpyCat"
  labels:
    kubernetes.io/metadata.name: grumpycat
  name: paul
spec:
  finalizers:
  - kubernetes
