kubernetes-config/base/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"cat-server"}, {"apiVersion":"apps/v1","kind":"Deployment","name":"cat-multiplayer"}]'
    app.openshift.io/route-disabled: "false"
  labels:
    app: cat-client
    app.kubernetes.io/component: cat-client
    app.kubernetes.io/instance: cat-client
    app.kubernetes.io/name: cat-client
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-client
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cat-client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cat-client        
    spec:
      containers:
      - image: quay.io/wpernath/grumpycat-melonjs:latest
        imagePullPolicy: Always
        name: cat-client
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: 
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 5m
            memory: 256Mi 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
