kubernetes-config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"grumpy-kafka-entity-operator"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"cat-repo-host"}]
    app.openshift.io/route-disabled: "false"
  labels:
    app: cat-server
    app.kubernetes.io/component: cat-server
    app.kubernetes.io/instance: cat-server
    app.kubernetes.io/name: cat-server
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cat-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:        
      labels:
        sidecar.istio.io/inject: 'true'      
        app: cat-server        
    spec:
      containers:
      - image: quay.io/wpernath/quarkus-grumpycat:latest
        imagePullPolicy: Always
        name: cat-server
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP        
        resources: 
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 512Mi 

        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
        startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3

      dnsPolicy: ClusterFirst
      restartPolicy: Always
