kubernetes-config/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"cat-server"}]'
  labels:
    app: cat-client
    app.kubernetes.io/component: cat-client
    app.kubernetes.io/instance: cat-client
    app.kubernetes.io/name: cat-client
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-client
spec:
  ports:
  - name: 8088-tcp
    port: 8088
    protocol: TCP
    targetPort: 8088
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: cat-client    
  sessionAffinity: None
  type: ClusterIP
