kubernetes-config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"grumpy-kafka-entity-operator"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"cat-repo-host"}]
  labels:
    app: cat-server
    app.kubernetes.io/component: cat-server
    app.kubernetes.io/instance: cat-server
    app.kubernetes.io/name: cat-server
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: cat-server    
  sessionAffinity: None
  type: ClusterIP
