kubernetes-config/base/client-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"cat-server"}]'
  labels:
    app: cat-client
    app.kubernetes.io/component: cat-client
    app.kubernetes.io/instance: cat-client
    app.kubernetes.io/name: cat-client
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-client
spec:
  port:
    targetPort: 8088-tcp
  to:
    kind: Service
    name: cat-client
    weight: 100
  wildcardPolicy: None
