kubernetes-config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"grumpy-kafka-entity-operator"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"cat-repo-host"}]
  labels:
    app: cat-server
    app.kubernetes.io/component: cat-server
    app.kubernetes.io/instance: cat-server
    app.kubernetes.io/name: cat-server
    app.kubernetes.io/part-of: grumpycat-app
  name: cat-server
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cat-server
    weight: 100
  wildcardPolicy: None
